--- a/test/src/Makefile
+++ b/test/src/Makefile
@@ -109,11 +109,11 @@ CTAGS = ctags
 am__tty_colors = \
 red=; grn=; lgn=; blu=; std=
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/khanai/Study/Fall_2016/dsjm_cleanup/config/missing --run aclocal-1.11
-AMTAR = ${SHELL} /home/khanai/Study/Fall_2016/dsjm_cleanup/config/missing --run tar
-AUTOCONF = ${SHELL} /home/khanai/Study/Fall_2016/dsjm_cleanup/config/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/khanai/Study/Fall_2016/dsjm_cleanup/config/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/khanai/Study/Fall_2016/dsjm_cleanup/config/missing --run automake-1.11
+ACLOCAL = ${SHELL} /home/khanai/Study/DSJM/dsjm_trace/config/missing --run aclocal-1.11
+AMTAR = ${SHELL} /home/khanai/Study/DSJM/dsjm_trace/config/missing --run tar
+AUTOCONF = ${SHELL} /home/khanai/Study/DSJM/dsjm_trace/config/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/khanai/Study/DSJM/dsjm_trace/config/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/khanai/Study/DSJM/dsjm_trace/config/missing --run automake-1.11
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -124,7 +124,7 @@ CPPUNIT_CONFIG = /usr/bin/cppunit-config
 CPPUNIT_LIBS = -lcppunit -ldl
 CXX = g++
 CXXDEPMODE = depmode=gcc3
-CXXFLAGS = 
+CXXFLAGS = -g -O2
 CYGPATH_W = echo
 DEFS = -DPACKAGE_NAME=\"\" -DPACKAGE_TARNAME=\"\" -DPACKAGE_VERSION=\"\" -DPACKAGE_STRING=\"\" -DPACKAGE_BUGREPORT=\"\" -DPACKAGE=\"dsjm\" -DVERSION=\"0.2\"
 DEPDIR = .deps
@@ -141,7 +141,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/khanai/Study/Fall_2016/dsjm_cleanup/config/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/khanai/Study/DSJM/dsjm_trace/config/missing --run makeinfo
 MKDIR_P = /bin/mkdir -p
 OBJEXT = o
 PACKAGE = dsjm
@@ -156,10 +156,10 @@ SET_MAKE =
 SHELL = /bin/sh
 STRIP = 
 VERSION = 0.2
-abs_builddir = /home/khanai/Study/Fall_2016/dsjm_cleanup/test/src
-abs_srcdir = /home/khanai/Study/Fall_2016/dsjm_cleanup/test/src
-abs_top_builddir = /home/khanai/Study/Fall_2016/dsjm_cleanup
-abs_top_srcdir = /home/khanai/Study/Fall_2016/dsjm_cleanup
+abs_builddir = /home/khanai/Study/DSJM/dsjm_trace/test/src
+abs_srcdir = /home/khanai/Study/DSJM/dsjm_trace/test/src
+abs_top_builddir = /home/khanai/Study/DSJM/dsjm_trace
+abs_top_srcdir = /home/khanai/Study/DSJM/dsjm_trace
 ac_ct_CC = gcc
 ac_ct_CXX = g++
 am__include = include
@@ -179,7 +179,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/khanai/Study/Fall_2016/dsjm_cleanup/config/install-sh
+install_sh = ${SHELL} /home/khanai/Study/DSJM/dsjm_trace/config/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
